# BuildDBInRust

./: .gitignore  Cargo.toml  README  README.md  build.rs
librustdb/: Cargo.toml
librustdb/src/: lib.rs
librustdb/src/btree/btree/: btree.rs
librustdb/src/btree/db/: mod.rs
librustdb/src/btree/kv/: mod.rs  windowsfilecontext.rs
librustdb/src/btree/parser/: delete.rs  expr.rs  insert.rs  mod.rs
librustdb/src/btree/table/: mod.rs  record.rs  table.rs  value.rs
librustdb/src/btree/tx/: database.rs  mod.rs  shared.rs  txRecord.rs  txbiter.rs  txinterface.rs  txreader.rs
proto/: db.proto
src/: main.rs
src/btree/: btree.rs  btreeinterface.rs  mod.rs  util.rs
src/btree/btree/: btree.rs  btreeinterface.rs  mod.rs  request.rs
src/btree/db/: database.rs  mod.rs  scanner.rs
src/btree/kv/: contextinterface.rs  filecontext.rs  memorycontext.rs  mod.rs  node.rs  nodeinterface.rs  noderef.rs  windowsfilecontext.rs
src/btree/parser/: Expr.rs  createtable.rs  delete.rs  insert.rs  lib.rs  mod.rs  requesthandler.rs  select.rs  sqlerror.rs  statement.rs  update.rs
src/btree/scan/: biter.rs  comp.rs  mod.rs  scaninterface.rs
src/btree/table/: mod.rs  record.rs  table.rs  value.rs
src/btree/tx/: closuerdemo.rs  database.rs  dbcontext.rs  dbinstance.rs  memoryContext.rs  mod.rs  tx.rs  txRecord.rs  txScanner.rs  txdemo.rs  txfreelist.rs  txinterface.rs  txreader.rs  txwriter.rs  windowsfileContext.rs  winmmap.rs
src/client/: db_service.rs  main.rs
src/server/: db_service.rs  main.rs
