[package]
name = "rustdb"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ntapi = "0.4.1"
winapi = { version = "0.3", features = ["memoryapi","fileapi","processthreadsapi","handleapi", "winbase", "minwindef"] }