[package]
name = "rustdb"
version = "0.1.0"
edition = "2021"

[dependencies]
librustdb = { path = "./librustdb" }
rand = "0.8.5"
lazy_static = "1.4"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[[bin]] # Bin to run the RustDB gRPC server
name = "rustdb-server"
path = "src/server/main.rs"

[[bin]] # Bin to run the RustDB gRPC client
name = "rustdb-client"
path = "src/server/main.rs"

[build-dependencies]
tonic-build = "0.12"
